--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 $text-color-green: #01a1a1;
 $btn-color-green: #16928e;
 $text-color-grey: #bcbdbd;
+$section-color-black: #121117;
 
 .btn-material-green {
     color: white;
